@@ -11,6 +11,12 @@ Package author: Mikhail S. Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-08
+2015-12-03 Mikhail S. Dubrovin
+- add Igor's script app/find_runs_for_data_type
+- add data/copy_part_of_xtc_file.cfg
+- DetectorAccess - add delete m_cmode and m_calibpars in destructor (PSAS-139)
+	
 Tag: V00-03-07
 2015-11-17 Mikhail S. Dubrovin
 - update documentation for AreaDetector, WFDetector, PyDetector
